refactor: simplify index.html by removing unused meta tags and updating viewport settings

--- a/index.html
+++ b/index.html
@@ -2,17 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
-    <meta name="msapplication-navbutton-color" content="#000000" />
-    <meta name="msapplication-TileColor" content="#000000" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="Tim Kuessner" />
-    <title>Hi, I'm Tim Kuessner</title>
-    <meta name="description" content="Tim Kuessner - Student passionate about mathematics, problem-solving, and programming. Currently studying in New Zealand as an exchange student." />
+    <title>Tim Kuessner</title>
   </head>
-  <body>
+  <body class="bg-black text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
